# diffusion-lm

./: README.md  pyproject.toml
demo/: sampling.ipynb
difflm/: __init__.py  dataset.py  interface.py  sampler.py  trainer.py
difflm/cfg/: model.yaml
difflm/models/: decoder.py  encoder.py  loss.py  model.py  network_blocks.py  transformer.py
difflm/pnp/: __init__.py  classifier.py  dataset.py
difflm/utils/: __init__.py  diffusion.py  general.py
scripts/: clf_train.py  sample.py  train.py
